--- a/imgCalc_original.ipynb
+++ b/imgCalc_original.ipynb
@@ -305,7 +305,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Voz",
    "language": "python",
    "name": "python3"
   },
@@ -319,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
