Cuaderno explicado y todo finalizado en notebook_final

--- a/notebook_jesus.ipynb
+++ b/notebook_jesus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "dda1e504",
    "metadata": {},
    "outputs": [
@@ -38,9 +38,10 @@
     "from scipy.signal import resample, correlate\n",
     "from imageio import get_writer\n",
     "import subprocess\n",
+    "from scipy.signal import find_peaks\n",
     "import shutil\n",
     "\n",
-    "# === CONFIGURACIÓN ===\n",
+    "# Configuración\n",
     "AUDIO_PATH = 'audios/music.wav'\n",
     "FPS = 60\n",
     "FRAME_FOLDER = 'frames'\n",
@@ -50,19 +51,17 @@
     "# Crear carpeta\n",
     "os.makedirs(FRAME_FOLDER, exist_ok=True)\n",
     "\n",
-    "# === 1. Cargar audio ===\n",
+    "# Cargar audio\n",
     "fs, x = lee_audio(AUDIO_PATH)\n",
     "x = x.astype(np.float32)\n",
     "dur = len(x) / fs\n",
     "n_frames = int(FPS * dur)\n",
     "samples_per_frame = int(fs / FPS)\n",
     "\n",
-    "# === 2. Descriptores ===\n",
+    "# Descriptores que vamos a utilizar\n",
     "env = envolvente(x, fs=fs)\n",
     "pitch = track_pitch(x, fs)\n",
     "pitch = np.nan_to_num(pitch)\n",
-    "\n",
-    "from scipy.signal import find_peaks\n",
     "\n",
     "def autocorrelacion(x_frame):\n",
     "    x_frame = x_frame - np.mean(x_frame)\n",
@@ -70,17 +69,17 @@
     "    mid = len(corr) // 2\n",
     "    return corr[mid:] / np.max(np.abs(corr) + 1e-9)\n",
     "\n",
-    "# 1. Autocorrelación sobre la envolvente\n",
+    "# Autocorrelación sobre la envolvente\n",
     "env_smooth = envolvente(x, fs=fs, tr=0.1)  # más estable\n",
     "corr_env = autocorrelacion(env_smooth)\n",
     "\n",
-    "# 2. Estimar el tempo global\n",
+    "# Estimar el tempo global\n",
     "min_lag = int(fs / 5)    # máx 5 Hz = 300 BPM\n",
     "max_lag = int(fs / 1.5)  # mín 1.5 Hz = 90 BPM\n",
     "lag_beat = np.argmax(corr_env[min_lag:max_lag]) + min_lag\n",
     "periodo_muestras = lag_beat\n",
     "\n",
-    "# 3. Encontrar los picos en la envolvente\n",
+    "# Encontrar los picos en la envolvente\n",
     "peaks, _ = find_peaks(env_smooth, distance=periodo_muestras * 0.8)\n",
     "\n",
     "# Convertir los picos (en muestras) a tiempos (en segundos) y luego a frames\n",
@@ -108,7 +107,7 @@
     "env_frame = np.interp(np.linspace(0, len(env), n_frames), np.arange(len(env)), env)\n",
     "pitch_frame = np.interp(np.linspace(0, len(pitch), n_frames), np.arange(len(pitch)), pitch)\n",
     "\n",
-    "# === 3. Generar Frames ===\n",
+    "# Generar Frames \n",
     "print(\"Generando frames...\")\n",
     "for i in range(n_frames):\n",
     "    fig, ax = plt.subplots(figsize=(8, 6))\n",
@@ -118,7 +117,7 @@
     "    if any(abs(i - bf) <= 2 for bf in beat_frames):  # mayor tolerancia\n",
     "        ax.scatter(0.5, 0.5, s=1500, c='cyan', alpha=0.9, edgecolors='none', marker='o')\n",
     "\n",
-    "    # ==== 3.1 Obtener trozo de señal actual ====\n",
+    "    # Obtener trozo de señal actual\n",
     "    start = i * samples_per_frame\n",
     "    end = min(len(x), start + samples_per_frame)\n",
     "    x_frame = x[start:end]\n",
@@ -133,18 +132,18 @@
     "    ritmo_size = 300 * ritmo_osc + 20\n",
     "    ax.scatter(0.5, 0.5, s=ritmo_size, c=[ritmo_color], alpha=0.3)\n",
     "    \n",
-    "    # ==== 3.2 Espectro (resample a N barras) ====\n",
+    "    # Espectro (resample a N barras) \n",
     "    X, fa = espectro(x_frame, modo=1, fs=fs)\n",
     "    X_resampled = resample(X, N_BARRAS)\n",
     "    X_resampled = normalizar(X_resampled)\n",
     "\n",
-    "    # ==== 3.3 Dibujar barras ====\n",
+    "    # Dibujar barras\n",
     "    bar_width = 1 / N_BARRAS\n",
     "    for j in range(N_BARRAS):\n",
     "        height = X_resampled[j]\n",
     "        ax.bar(j * bar_width, height, width=bar_width*0.8, color=(0.1, 0.8*height, 1.0), align='edge')\n",
     "\n",
-    "    # ==== 3.4 Dibujar partícula ====\n",
+    "    # Dibujar partícula\n",
     "    y_pos = pitch_frame[i]\n",
     "    size = 100 + env_frame[i] * 300\n",
     "    color = (1.0, env_frame[i], pitch_frame[i])\n",
@@ -159,7 +158,7 @@
     "\n",
     "print(\"Frames generados.\")\n",
     "\n",
-    "# === 4. Crear video ===\n",
+    "# Crear video\n",
     "\n",
     "def crear_video(output_path, fps=30, audio_path=AUDIO_PATH):\n",
     "    print(\"Creando video con imagen y audio...\")\n",
