Mini corrección en el markdown

--- a/entrega_rick.ipynb
+++ b/entrega_rick.ipynb
@@ -5,9 +5,23 @@
    "id": "47389ef7",
    "metadata": {},
    "source": [
-    "# PixelSounds: Visual Audio Encoding\n",
+    "# PixelSounds: Visual Audio Encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4119b036",
+   "metadata": {},
+   "source": [
     "\n",
-    "## Introducción: Codificación de Audio en Vídeo con PixelSounds\n",
+    "## Introducción: Codificación de Audio en Vídeo con PixelSounds\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a46c7086",
+   "metadata": {},
+   "source": [
     "\n",
     "PixelSounds es un sistema que convierte una señal de audio en un vídeo compuesto por frames. Cada frame codifica un bloque temporal del audio en forma de imagen, permitiendo visualizar la información sonora a través de representaciones visuales. El proceso es completamente reversible: se puede reconstruir el audio original a partir del vídeo.\n",
     "\n",
@@ -43,33 +57,6 @@
     "  Extrae los frames del vídeo, reconstruye los bloques de audio a partir de las imágenes, y aplica overlap-add para recuperar la señal completa.\n",
     "\n",
     "Este sistema permite experimentar con distintas formas de representar el contenido sonoro de una señal de audio, así como aplicar técnicas de visualización y análisis sobre los vídeos generados.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32d10cf4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from IPython.display import Audio, Video\n",
-    "import shutil\n",
-    "\n",
-    "from funciones_rick import PixelSoundsEncoder, PixelSoundsDecoder\n",
-    "from vozyaudio import lee_audio"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f7b15adf",
-   "metadata": {},
-   "source": [
-    "### Pasos previos\n",
-    "* Borrar carpetas y sus contenidos (si existen)\n",
-    "* Tener un audio .wav"
    ]
   },
   {
