--- a/entrega_rick.ipynb
+++ b/entrega_rick.ipynb
@@ -62,6 +62,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "da8f30ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === IMPORTS ===\n",
+    "import os\n",
+    "import shutil\n",
+    "import subprocess\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import imageio.v2 as imageio\n",
+    "from scipy.signal import firwin, lfilter, get_window\n",
+    "from scipy.fft import fft, ifft\n",
+    "from scipy.io import wavfile as wav\n",
+    "from IPython.display import Audio, Video, display\n",
+    "\n",
+    "from vozyaudio import lee_audio, sonido\n",
+    "from funciones_rick import PixelSoundsEncoder, PixelSoundsDecoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "de4add8a",
    "metadata": {},
    "outputs": [],
