--- a/notebook_robin.ipynb
+++ b/notebook_robin.ipynb
@@ -227,12 +227,10 @@
     "        freqs (numpy.ndarray): Array de frecuencias.\n",
     "\n",
     "    Returns:\n",
-    "        numpy.ndarray: Notas MIDI restringidas al rango 48-96 correspondiente a las notas C2 - C7\n",
+    "        numpy.ndarray: Notas MIDI\n",
     "    \"\"\"\n",
-    "    # La formula para convertir de frecuencia a nota MIDI es 69 + 12 * log2(f / 440)\n",
-    "    # https://newt.phys.unsw.edu.au/jw/notes.html\n",
     "    notas_midi = np.round(69 + 12 * np.log2(freqs / 440)).astype(int)\n",
-    "    return np.clip(notas_midi, 48, 96)\n",
+    "    return notas_midi\n",
     "\n",
     "\n",
     "def imagen_a_audio(nombre_archivo, fs, duracion_nota=0.5, duracion_total=5, num_frecuencias=50):\n",
@@ -739,13 +737,6 @@
     "cancion = cancion / np.max(np.abs(cancion))\n",
     "sf.write('cancion_final.wav', cancion, tasa_muestreo)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
