--- a/entregaRobAro.ipynb
+++ b/entregaRobAro.ipynb
@@ -36,7 +36,12 @@
    "cell_type": "markdown",
    "id": "31d42a15-098f-4281-a9af-de1233572f82",
    "metadata": {},
-   "source": []
+   "source": [
+    "Si de alguna forma quisiéramos \"escuchar\" una imagen hay unos cuantos acercamientos posibles. Uno bastante inmediato es considerar la propia imagen como el espectrograma de un audio y entonces realizar la ISTFT para obtener el sonido correspondiente. Es algo que se puede ver en YouTube en algún que otro vídeo y no está mal, pero no parece tener mucha más gracia y el objetivo es intentar cosas nuevas y originales.\n",
+    "\n",
+    "Planteando este proyecto la primera idea que surgió fue, que ya que hay tantas incógnitas y caminos posibles para elegir, una forma de avanzar sería extraer la mayor cantidad de características de una imagen para tener algo desde donde partir.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
