Ultimados algunos detalles de ENTREGA_FINAL

--- a/ENTREGA_FINAL.ipynb
+++ b/ENTREGA_FINAL.ipynb
@@ -13,15 +13,21 @@
    "id": "73f311bf",
    "metadata": {},
    "source": [
-    "> ⚠️ **Advertencia de Fotosensibilidad**  \n",
+    "⚠️ **Advertencia de Fotosensibilidad**  \n",
     "> Este notebook incluye secuencias de vídeo generadas a partir de señales de audio, que pueden contener parpadeos rápidos, patrones repetitivos o transiciones de alto contraste.  \n",
     "> \n",
-    "> Las personas con fotosensibilidad o epilepsia fotosensible deben evitar la reproducción de estos vídeos, o asegurarse de visualizarlos con las precauciones adecuadas (pantalla reducida, brillo bajo, sin visión directa).\n"
+    "> Las personas con fotosensibilidad o epilepsia fotosensible deben evitar la reproducción de estos vídeos, o asegurarse de visualizarlos con las precauciones adecuadas (pantalla reducida, brillo bajo, sin visión directa).\n",
+    "\n",
+    "IMPORTANTE:\n",
+    "* Recomendamos ejecutar este cuaderno desde el principio y en orden puesto que hay variables que se sobreescriben.\n",
+    "* Recomendamos ejecutar este cuaderno en el **entorno nativo de Jupyter Notebook** (al que se accede mediante Anaconda Powershell Prompt) o en **Visual Studio Code**, puesto que son los únicos en los que hemos testeado el correcto funcionamiento. Si se ejecuta en otros entornos, **no podemos asegurar el correcto funcionamiento de todos los componentes del cuaderno**, pusto que, por ejemplo, cada entorno soporta distintos formatos de vídeo o audio.\n",
+    "* Para el correcto funcionamiento del programa **HAY QUE TENER CORRECTAMENTE INSTALADO FFMPEG**, con su carpeta en el disco local y añadida al PATH del sistema. Esto se debe a que la libreria `ffmpeg-python` hace uso de ffmpeg. \n",
+    "Para más información, visitar https://www.wikihow.com/Install-FFmpeg-on-Windows.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a66fb434",
    "metadata": {},
    "outputs": [],
@@ -143,7 +149,7 @@
    "id": "8bd81630",
    "metadata": {},
    "source": [
-    "## PixelSounds: Visualización de parametros de audio en vídeo\n",
+    "## PixelSounds: Visualización de parámetros de audio en vídeo\n",
     "### Introducción"
    ]
   },
@@ -152,7 +158,7 @@
    "id": "90f2c80c",
    "metadata": {},
    "source": [
-    "En este caso, y siguiendo en la línea de los anteriores conversores propuestos en el proyecto PixelSounds, vamos a tratar de convertir audio a vídeo. Sin embargo, no va a ser cualquier tipo de vídeo. Vamos a tratar de generar un vídeo que nos permita visualizar en una primera vista algunas características del audio que hay detrás. Para ello vamos a extraer algunos descriptores del audio (los cuales especificaremos más adelante) y vamos a transformarlos en algo visual. De esta forma, iremos generando fotogramas y mediante la libreria `ffmpeg` los uniremos para crear un video. En este cuaderno vamos a ir desgranando una por una las transformaciones que haremos para visualizar los distintos descriptores. Después uniremos todas las funciones para generar un fotograma. Tras aprender a generar un fotograma, podremos generar muchos para crear el vídeo."
+    "El primer conversor que vamos a desarrollar en el proyecto PixelSounds es un conversor de audio a vídeo. Sin embargo, no va a ser cualquier tipo de vídeo. Vamos a tratar de generar un vídeo que nos permita visualizar en una primera vista algunas características del audio que hay detrás. Para ello vamos a extraer algunos descriptores del audio (los cuales especificaremos más adelante) y vamos a transformarlos en algo visual. De esta forma, iremos generando fotogramas y mediante la librería `ffmpeg` los uniremos para crear un video. En esta primera parte del cuaderno vamos a ir desgranando una por una las transformaciones que haremos para visualizar los distintos descriptores. Después uniremos todas las funciones para generar un fotograma. Tras aprender a generar un fotograma, podremos generar muchos para crear el vídeo."
    ]
   },
   {
@@ -166,10 +172,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e44b2855",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eliminando carpeta existente: fotogramas/\n",
+      "Eliminando carpeta existente: exports/\n",
+      "Carpeta fotogramas creada.\n",
+      "Carpeta exports creada.\n"
+     ]
+    }
+   ],
    "source": [
     "# Configuración\n",
     "AUDIO_PATH = 'audios/music.wav' # Ruta del audio que vamos a usar\n",
@@ -178,7 +195,7 @@
     "N_BARRAS = 60  # Número de barras del espectro\n",
     "\n",
     "# Borrar las carpetas de salida si existen\n",
-    "for d in (\"fotogramas\", \"pruebas\"):\n",
+    "for d in (\"fotogramas\", \"exports\"):\n",
     "    if os.path.exists(d):\n",
     "        print(f\"Eliminando carpeta existente: {d}/\")\n",
     "        shutil.rmtree(d)\n",
@@ -205,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fca6dd38",
    "metadata": {},
    "outputs": [],
@@ -244,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "afd78f44",
    "metadata": {},
    "outputs": [],
@@ -287,12 +304,12 @@
    "id": "8527b556",
    "metadata": {},
    "source": [
-    "Con estas variables ya tenemos todo lo necesario para generar el primer componente que variará durante el vídeo. Lo siguiente que debemos hacer es definir una función que dibujo el circulo en pantalla variando segúne estos valores. A esta función la llamaremos `dibujar_particula`."
+    "Con estas variables ya tenemos todo lo necesario para generar el primer componente que variará durante el vídeo. Lo siguiente que debemos hacer es definir una función que dibuje el circulo en pantalla variando según estos valores. A esta función la llamaremos `dibujar_particula`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a9a23679",
    "metadata": {},
    "outputs": [],
@@ -321,10 +338,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f5f67373",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generando frames...\n",
+      "Completado 100.00 %"
+     ]
+    }
+   ],
    "source": [
     "def generar_frames(x,fs, FRAME_FOLDER):\n",
     "    \"\"\" Genera los frames para el vídeo y los guarda en la carpeta FRAME_FOLDER\n",
@@ -342,7 +368,7 @@
     "        porcentaje = (i / (n_frames-1)) * 100\n",
     "        print(f\"\\rCompletado {porcentaje:.2f} %\", end=\"\", flush=True)\n",
     "\n",
-    "        fig, ax = plt.subplots(figsize=(6, 4))\n",
+    "        fig,ax = plt.subplots(figsize=(6, 4))\n",
     "\n",
     "        # Visual: Círculo que sube/baja con pitch y cambia tamaño con envolvente\n",
     "        dibujar_particula(pitch_frame[i], env_frame[i])\n",
@@ -356,12 +382,12 @@
     "        plt.close(fig)\n",
     "    \n",
     "generar_frames(x,fs,FRAME_FOLDER)\n",
-    "out = \"pruebas/pruebaPitch.mp4\""
+    "out = \"exports/pruebaPitch.mp4\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "8810ded3",
    "metadata": {},
    "outputs": [],
@@ -383,25 +409,33 @@
     "                video_input, audio_input,\n",
     "                out_path,\n",
     "                vcodec='libx264',\n",
-    "                acodec='aac',\n",
+    "                acodec=\"pcm_s32le\", # Formato de audio soportado por VSCode\n",
     "                pix_fmt='yuv420p',\n",
     "                shortest=None\n",
     "            )\n",
     "            .run(overwrite_output=True)\n",
     "        )\n",
     "\n",
-    "        print(f\"[OK] Video exportado como: {out_path}\")\n",
+    "        print(f\"\\n[OK] Video exportado como: {out_path}\")\n",
     "    except ffmpeg.Error as e:\n",
-    "        print(\"❌ Error al crear el video:\")\n",
+    "        print(\"Error al crear el video:\")\n",
     "        print(e.stderr.decode() if hasattr(e, \"stderr\") else e)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2cc26ef0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[OK] Video exportado como: exports/pruebaPitch.mp4\n"
+     ]
+    }
+   ],
    "source": [
     "crear_video(AUDIO_PATH,out)"
    ]
@@ -419,9 +453,25 @@
    "execution_count": null,
    "id": "cd3a4feb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"exports/pruebaPitch.mp4\" controls  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Video(\"pruebas/pruebaPitch.mp4\")"
+    "Video(out)"
    ]
   },
   {
@@ -477,7 +527,16 @@
    "execution_count": null,
    "id": "23ee1ca2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generando frames...\n",
+      "Completado 100.00 %[OK] Video exportado como: exports/pruebaBarras.mp4\n"
+     ]
+    }
+   ],
    "source": [
     "def generar_frames(x,fs, FRAME_FOLDER):\n",
     "    \"\"\" Genera los frames para el vídeo y los guarda en la carpeta FRAME_FOLDER\n",
@@ -526,7 +585,7 @@
     "    \n",
     "generar_frames(x,fs,FRAME_FOLDER)\n",
     "\n",
-    "out = \"pruebas/pruebaBarras.mp4\"\n",
+    "out = \"exports/pruebaBarras.mp4\"\n",
     "crear_video(AUDIO_PATH,out)"
    ]
   },
@@ -540,12 +599,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8a44c92e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"exports/pruebaBarras.mp4\" controls  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Video(\"pruebas/pruebaBarras.mp4\")"
+    "Video(out)"
    ]
   },
   {
@@ -572,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0c09f905",
    "metadata": {},
    "outputs": [],
@@ -600,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c2ef1d08",
    "metadata": {},
    "outputs": [],
@@ -649,10 +724,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "d653e3b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generando frames...\n",
+      "Completado 100.00 %[OK] Video exportado como: exports/pruebaRitmo.mp4\n"
+     ]
+    }
+   ],
    "source": [
     "def generar_frames(x,fs, FRAME_FOLDER):\n",
     "    \"\"\" Genera los frames para el vídeo y los guarda en la carpeta FRAME_FOLDER\n",
@@ -709,7 +793,7 @@
     "    \n",
     "generar_frames(x,fs,FRAME_FOLDER)\n",
     "\n",
-    "out = \"pruebas/pruebaRitmo.mp4\"\n",
+    "out = \"exports/pruebaRitmo.mp4\"\n",
     "crear_video(AUDIO_PATH,out)"
    ]
   },
@@ -723,12 +807,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0b9c0c88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"exports/pruebaRitmo.mp4\" controls  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Video(\"pruebas/pruebaRitmo.mp4\")"
+    "Video(out)"
    ]
   },
   {
@@ -743,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a38f1360",
    "metadata": {},
    "outputs": [],
@@ -813,10 +913,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "79f7dafa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generando frames...\n",
+      "Completado 100.00 %[OK] Video exportado como: exports/pruebaRitmo2.mp4\n"
+     ]
+    }
+   ],
    "source": [
     "def generar_frames(x,fs, FRAME_FOLDER):\n",
     "    \"\"\" Genera los frames para el vídeo y los guarda en la carpeta FRAME_FOLDER\n",
@@ -882,18 +991,34 @@
     "    \n",
     "generar_frames(x,fs,FRAME_FOLDER)\n",
     "\n",
-    "out = \"pruebas/pruebaRitmo2.mp4\"\n",
+    "out = \"exports/pruebaRitmo2.mp4\"\n",
     "crear_video(AUDIO_PATH,out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "6f340257",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"exports/pruebaRitmo2.mp4\" controls  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Video(\"pruebas/pruebaRitmo2.mp4\")"
+    "Video(out)"
    ]
   },
   {
@@ -917,7 +1042,7 @@
    "id": "2e83e9e8",
    "metadata": {},
    "source": [
-    "Para darle un toque final al programa estábamos pensando en jugar con la tonalidad del audio. Queriamos encontrar algo que variase según los cambios de tonalidad (cambio de grave a agudo etc). Se nos ocurrió que podríamos variar el color de fondo y, buscando por Internet, encontramos algo que podemos obtener a partir del espectro de la señal: **el centroide espectral**. El centroide espectral indica la \"brillantez\" del sonido, es decir, qué tan concentrada está la energía en frecuencias altas.\n",
+    "Para darle un toque final al programa estábamos pensando en jugar con la tonalidad del audio. Queriamos encontrar algo que variase según los cambios de tonalidad (cambio de grave a agudo etc). Se nos ocurrió que podríamos variar el color de fondo y en la práctica 8 de la asignatura encontramos algo que podemos obtener a partir del espectro de la señal: **el centroide espectral**. El centroide espectral indica la \"brillantez\" del sonido, es decir, qué tan concentrada está la energía en frecuencias altas.\n",
     "\n",
     "* Un centroide alto → sonidos agudos o brillantes → fondo más claro o cálido.\n",
     "\n",
@@ -931,21 +1056,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import colorsys\n",
-    "from vozyaudio import espectro\n",
-    "import numpy as np\n",
-    "\n",
-    "import colorsys\n",
-    "from vozyaudio import espectro\n",
-    "import numpy as np\n",
-    "\n",
-    "def color_fondo_por_centroide(X, fa, x_frame, fs):\n",
+    "def color_fondo_por_centroide(X, fa):\n",
     "    \"\"\" Genera un color RGB para el fondo en función del centroide espectral del frame.\n",
     "    Entrada:\n",
-    "        X (np.ndarray): Módulo del espectro del frame de audio (magnitudes)\n",
-    "        fa (np.ndarray): Vector de frecuencias correspondientes al espectro\n",
-    "        x_frame (np.ndarray): Fragmento de señal de audio correspondiente al frame\n",
-    "        fs (int): Frecuencia de muestreo del audio\n",
+    "        X (numpy.ndarray): Módulo del espectro del frame de audio (magnitudes)\n",
+    "        fa (numpy.ndarray): Vector de frecuencias correspondientes al espectro\n",
     "    Salida:\n",
     "        fondo_color (tuple): Color RGB normalizado (0-1) para usar como fondo del frame\n",
     "    \"\"\"\n",
@@ -978,10 +1093,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "9535e446",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generando frames...\n",
+      "Completado 100.00 %\n",
+      "[OK] Video exportado como: exports/pruebaColor.mp4\n"
+     ]
+    }
+   ],
    "source": [
     "def generar_frames(x,fs, FRAME_FOLDER):\n",
     "    \"\"\" Genera los frames para el vídeo y los guarda en la carpeta FRAME_FOLDER\n",
@@ -1021,7 +1146,7 @@
     "        \n",
     "        #------NUEVO------\n",
     "        \n",
-    "        fondo_color =  color_fondo_por_centroide(X,fa,x_frame,fs)\n",
+    "        fondo_color =  color_fondo_por_centroide(X,fa)\n",
     "        fig.set_facecolor(fondo_color)\n",
     "        \n",
     "        #------NUEVO------\n",
@@ -1049,18 +1174,34 @@
     "    \n",
     "generar_frames(x,fs,FRAME_FOLDER)\n",
     "\n",
-    "out = \"pruebas/pruebaColor.mp4\"\n",
+    "out = \"exports/pruebaColor.mp4\"\n",
     "crear_video(AUDIO_PATH,out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "f83cf550",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"exports/pruebaColor.mp4\" controls  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Video(\"pruebas/pruebaColor.mp4\")"
+    "Video(out)"
    ]
   },
   {
@@ -1081,10 +1222,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "ad816a94",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generando frames...\n",
+      "Completado 100.00 %\n",
+      "[OK] Video exportado como: exports/final.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"exports/final.mp4\" controls  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Configuración\n",
     "AUDIO_PATH = 'audios/music.wav' # Ruta del audio que vamos a usar\n",
@@ -1158,9 +1324,9 @@
     "    \n",
     "generar_frames(x,fs,FRAME_FOLDER)\n",
     "\n",
-    "out = \"final.mp4\"\n",
+    "out = \"exports/final.mp4\"\n",
     "crear_video(AUDIO_PATH,out)\n",
-    "Video(\"final.mp4\")"
+    "Video(out)"
    ]
   },
   {
@@ -2490,7 +2656,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Voz",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2504,7 +2670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
