--- a/entrega_jesu.ipynb
+++ b/entrega_jesu.ipynb
@@ -27,7 +27,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
+   "id": "3991c50b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔧 Instalando ffmpeg-python...\n",
+      "Collecting ffmpeg-python\n",
+      "  Downloading ffmpeg_python-0.2.0-py3-none-any.whl.metadata (1.7 kB)\n",
+      "Collecting future (from ffmpeg-python)\n",
+      "  Downloading future-1.0.0-py3-none-any.whl.metadata (4.0 kB)\n",
+      "Downloading ffmpeg_python-0.2.0-py3-none-any.whl (25 kB)\n",
+      "Downloading future-1.0.0-py3-none-any.whl (491 kB)\n",
+      "Installing collected packages: future, ffmpeg-python\n",
+      "Successfully installed ffmpeg-python-0.2.0 future-1.0.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  WARNING: The scripts futurize.exe and pasteurize.exe are installed in 'c:\\Users\\pc\\AppData\\Local\\Programs\\Python\\Python313\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "modules = {\n",
+    "    \"numpy\": \"numpy\",\n",
+    "    \"matplotlib\": \"matplotlib\",\n",
+    "    \"IPython\": \"ipywidgets\",\n",
+    "    \"scipy\": \"scipy\",\n",
+    "    \"librosa\": \"librosa\",\n",
+    "    \"ipywidgets\": \"ipywidgets\",\n",
+    "    \"bqplot\": \"bqplot\",\n",
+    "    \"pyaudio\": \"pyaudio\",\n",
+    "    \"ffmpeg\" : \"ffmpeg-python\"\n",
+    "}\n",
+    "\n",
+    "for mod, pip_name in modules.items():\n",
+    "    try:\n",
+    "        __import__(mod)\n",
+    "    except ImportError:\n",
+    "        if pip_name:\n",
+    "            print(f\"🔧 Instalando {pip_name}...\")\n",
+    "            %pip install {pip_name}\n",
+    "        else:\n",
+    "            print(f\"⚠️ Módulo {mod} no se puede instalar automáticamente (builtin o personalizado)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "46b1bb8b",
    "metadata": {},
    "outputs": [],
@@ -57,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "cb2d03b6",
    "metadata": {},
    "outputs": [
@@ -65,8 +123,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eliminando carpeta existente: fotogramas/\n",
-      "Eliminando carpeta existente: pruebas/\n",
+      "No existe: fotogramas/ — nada que borrar.\n",
+      "No existe: pruebas/ — nada que borrar.\n",
       "Carpeta fotogramas creada.\n",
       "Carpeta pruebas creada.\n"
      ]
@@ -107,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "8161cf5d",
    "metadata": {},
    "outputs": [],
@@ -146,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "d37e7cc5",
    "metadata": {},
    "outputs": [],
@@ -194,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "72bbcd39",
    "metadata": {},
    "outputs": [],
@@ -223,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "e500a1e9",
    "metadata": {},
    "outputs": [
@@ -272,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "c8440c7f",
    "metadata": {},
    "outputs": [],
@@ -295,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "0f953c1f",
    "metadata": {},
    "outputs": [
@@ -303,6 +361,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Error al ejecutar generarVideo.bat: Command '['cmd', '/c', 'generarVideo.bat', 'audios/music.wav', 'pruebas/pruebaPitch.mp4']' returned non-zero exit status 1.\n",
       "\n",
       "Procesado terminado.\n"
      ]
@@ -322,24 +381,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "d3c5e926",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<video src=\"pruebas/pruebaPitch.mp4\" controls  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "To embed videos, you must pass embed=True (this may make your notebook files huge)\nConsider passing Video(url='...')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mVideo\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mpruebas/pruebaPitch.mp4\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\display.py:1217\u001b[39m, in \u001b[36mVideo.__init__\u001b[39m\u001b[34m(self, data, url, filename, embed, mimetype, width, height, html_attributes)\u001b[39m\n\u001b[32m   1211\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m data \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m embed:\n\u001b[32m   1212\u001b[39m     msg = \u001b[33m'\u001b[39m\u001b[33m'\u001b[39m.join([\n\u001b[32m   1213\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mTo embed videos, you must pass embed=True \u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   1214\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m(this may make your notebook files huge)\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m,\n\u001b[32m   1215\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mConsider passing Video(url=\u001b[39m\u001b[33m'\u001b[39m\u001b[33m...\u001b[39m\u001b[33m'\u001b[39m\u001b[33m)\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   1216\u001b[39m     ])\n\u001b[32m-> \u001b[39m\u001b[32m1217\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n\u001b[32m   1219\u001b[39m \u001b[38;5;28mself\u001b[39m.mimetype = mimetype\n\u001b[32m   1220\u001b[39m \u001b[38;5;28mself\u001b[39m.embed = embed\n",
+      "\u001b[31mValueError\u001b[39m: To embed videos, you must pass embed=True (this may make your notebook files huge)\nConsider passing Video(url='...')"
+     ]
     }
    ],
    "source": [
@@ -1283,7 +1339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1297,7 +1353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
